Update new work item

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Apr 22 2025 06:43:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jun 15 2025 11:09:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/" rel="canonical">
+  <link href="https://www.nords.fi" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
@@ -329,7 +329,7 @@
                   <div class="project-cms-item">
                     <div class="projects-cms-item">
                       <div class="projects-item">
-                        <a href="https://www.prelex.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/PreLex_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/PreLex_Mockup-p-500.webp 500w, images/PreLex_Mockup-p-800.webp 800w, images/PreLex_Mockup-p-1080.webp 1080w, images/PreLex_Mockup-p-1600.webp 1600w, images/PreLex_Mockup-p-2000.webp 2000w, images/PreLex_Mockup-p-2600.webp 2600w, images/PreLex_Mockup.webp 2800w" alt="PreLex mallikuva" class="projects-thumb">
+                        <a href="https://www.prelex.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/PreLex_Mockup.webp" loading="lazy" alt="PreLex mallikuva" class="projects-thumb">
                           <div class="projects-btn-wrap">
                             <div class="projects-btn-text">Tutustu</div>
                             <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -347,7 +347,7 @@
                   <div class="project-cms-item">
                     <div class="projects-cms-item">
                       <div class="projects-item">
-                        <a href="https://www.lannentilanleipomo.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Lannentilan_Leipomo_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Lannentilan_Leipomo_Mockup-p-500.webp 500w, images/Lannentilan_Leipomo_Mockup-p-800.webp 800w, images/Lannentilan_Leipomo_Mockup-p-1080.webp 1080w, images/Lannentilan_Leipomo_Mockup-p-1600.webp 1600w, images/Lannentilan_Leipomo_Mockup-p-2000.webp 2000w, images/Lannentilan_Leipomo_Mockup-p-2600.webp 2600w, images/Lannentilan_Leipomo_Mockup.webp 2800w" alt="Lännentilan leipomo mallikuva" class="projects-thumb">
+                        <a href="https://www.lannentilanleipomo.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Lannentilan_Leipomo_Mockup.webp" loading="lazy" alt="Lännentilan leipomo mallikuva" class="projects-thumb">
                           <div class="projects-btn-wrap">
                             <div class="projects-btn-text">Tutustu</div>
                             <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -365,7 +365,7 @@
                   <div class="project-cms-item">
                     <div class="projects-cms-item">
                       <div class="projects-item">
-                        <a href="https://www.mrcardetailing.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/mr-car-detailing-mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/mr-car-detailing-mockup-p-500.webp 500w, images/mr-car-detailing-mockup-p-800.webp 800w, images/mr-car-detailing-mockup-p-1080.webp 1080w, images/mr-car-detailing-mockup-p-1600.webp 1600w, images/mr-car-detailing-mockup-p-2000.webp 2000w, images/mr-car-detailing-mockup-p-2600.webp 2600w, images/mr-car-detailing-mockup.webp 2800w" alt="MR Car Detailing mallikuva" class="projects-thumb">
+                        <a href="https://www.mrcardetailing.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/mr-car-detailing-mockup.webp" loading="lazy" alt="MR Car Detailing mallikuva" class="projects-thumb">
                           <div class="projects-btn-wrap">
                             <div class="projects-btn-text">Tutustu</div>
                             <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -383,7 +383,7 @@
                   <div class="project-cms-item">
                     <div class="projects-cms-item">
                       <div class="projects-item">
-                        <a href="https://finhem.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/FINHEM_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/FINHEM_Mockup-p-500.webp 500w, images/FINHEM_Mockup-p-800.webp 800w, images/FINHEM_Mockup-p-1080.webp 1080w, images/FINHEM_Mockup-p-1600.webp 1600w, images/FINHEM_Mockup-p-2000.webp 2000w, images/FINHEM_Mockup-p-2600.webp 2600w, images/FINHEM_Mockup.webp 2800w" alt="FINHEM Oy mallikuva" class="projects-thumb">
+                        <a href="https://www.elainsairaalasacrum.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/sacrum-mockup.webp" loading="lazy" alt="Eläinsairaala Sacrum Oy verkkosivut" class="projects-thumb">
                           <div class="projects-btn-wrap">
                             <div class="projects-btn-text">Tutustu</div>
                             <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -392,7 +392,7 @@
                           </div>
                         </a>
                         <div class="projects-title-wrap">
-                          <a href="#" class="projects-title">FINHEM Oy</a>
+                          <a href="https://www.elainsairaalasacrum.fi/" target="_blank" class="projects-title">Eläinsairaala Sacrum Oy</a>
                           <p class="project-subtitle">Pro -kotisivut</p>
                         </div>
                       </div>
