--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 15 2025 11:09:38 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="68027b0e8102484c7914ed26" data-wf-site="68027b0d8102484c7914ecad">
+<!DOCTYPE html><!--  Last Published: Thu Jul 03 2025 11:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="68027b0e8102484c7914ed26" data-wf-site="68027b0d8102484c7914ecad" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Hinnasto – Nords Oy</title>
@@ -193,14 +193,10 @@
                   <div class="pricing-item-top">
                     <div class="pricing-item-heading">
                       <div class="pricing-title-wrap">
-                        <div class="div-block-2">
-                          <p class="pricing-title">Chatbot -työkalu</p>
-                          <div id="w-node-_126aaeee-a723-6734-8842-5998c6dcc578-6226f583" class="btn-wrap small">Uusi</div>
-                        </div>
+                        <p class="pricing-title">Google Ads</p>
                       </div>
                       <div class="pricing-price-wrap">
-                        <h2 class="pricing-price">300€</h2>
-                        <p class="pricing-price-months">+ ALV 25.5%</p>
+                        <h2 class="pricing-price">Sopimuksen mukaan</h2>
                       </div>
                     </div>
                     <div class="pricing-item-separetor"></div>
@@ -208,13 +204,12 @@
                       <div class="pricing-list-wrap">
                         <div class="pricing-feature-list w-richtext">
                           <ul role="list">
-                            <li>24/7 asiakaspalvelija</li>
-                            <li>Räätälöity vastaustyyli</li>
-                            <li>Monikielinen avustaja</li>
-                            <li>Nopeat vastausajat</li>
-                            <li>Koulutettu juuri sinun yritykselle</li>
-                            <li>Jatkuva kehitys</li>
-                            <li>Tyytyväisyystakuu</li>
+                            <li>Tarkka kohdentaminen</li>
+                            <li>Budjetointi tarpeiden mukaan</li>
+                            <li>Avainsanatutkimus</li>
+                            <li>Mainostekstien suunnittelu</li>
+                            <li>Kampanjastrategia</li>
+                            <li>Seuranta ja raportointi</li>
                           </ul>
                         </div>
                       </div>
