--- a/palvelut.html
+++ b/palvelut.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 15 2025 11:09:38 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="68027b0e8102484c7914ed15" data-wf-site="68027b0d8102484c7914ecad">
+<!DOCTYPE html><!--  Last Published: Thu Jul 03 2025 11:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="68027b0e8102484c7914ed15" data-wf-site="68027b0d8102484c7914ecad" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Palvelut – Nords Oy</title>
@@ -141,12 +141,12 @@
                   <div class="services-thumb-wrap"><img src="images/taustakuva-8.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
                 </div>
                 <div class="services-item">
-                  <div class="services-icon-wrap"><img src="images/chat-ikoni.svg" loading="lazy" alt="Chat ikoni" class="services-icon"></div>
+                  <div class="services-icon-wrap"><img src="images/10813983_google_ads_icon.svg" loading="lazy" alt="" class="services-icon larger"></div>
                   <div class="services-title-wrap">
-                    <h2 class="services-title">AI-Chatbot</h2>
+                    <h2 class="services-title">Google Ads</h2>
                   </div>
                   <div class="services-text-wrap">
-                    <p class="services-text">Suunnittelemme tekoälypohjaisia chatbotteja, jotka vastaavat kysymyksiin nopeasti ja asiantuntevasti – juuri teidän tarpeidenne mukaan. 24/7.</p>
+                    <p class="services-text">Tavoita asiakkaasi juuri oikealla hetkellä. Toteutamme Google-mainontaa, joka tuo näkyvyyttä ja klikkejä.</p>
                   </div>
                   <div class="services-thumb-wrap"><img src="images/taustakuva-6.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
                 </div>
