--- a/tyot.html
+++ b/tyot.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 15 2025 11:09:38 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="68027b0e8102484c7914ed16" data-wf-site="68027b0d8102484c7914ecad">
+<!DOCTYPE html><!--  Last Published: Thu Jul 03 2025 11:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="68027b0e8102484c7914ed16" data-wf-site="68027b0d8102484c7914ecad" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Työt – Nords Oy</title>
