--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Sun Jun 15 2025 11:09:38 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad">
+<!DOCTYPE html><!--  Last Published: Thu Jul 03 2025 11:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Nords Oy – Digitoimisto, joka välittää.</title>
@@ -302,12 +302,12 @@
                 <div class="services-thumb-wrap"><img src="images/taustakuva-8.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
               </div>
               <div class="services-item">
-                <div class="services-icon-wrap"><img src="images/chat-ikoni.svg" loading="lazy" alt="Chat ikoni" class="services-icon"></div>
+                <div class="services-icon-wrap"><img src="images/10813983_google_ads_icon.svg" loading="lazy" alt="" class="services-icon larger"></div>
                 <div class="services-title-wrap">
-                  <h2 class="services-title">AI-Chatbot</h2>
+                  <h2 class="services-title">Google Ads</h2>
                 </div>
                 <div class="services-text-wrap">
-                  <p class="services-text">Suunnittelemme tekoälypohjaisia chatbotteja, jotka vastaavat kysymyksiin nopeasti ja asiantuntevasti – juuri teidän tarpeidenne mukaan. 24/7.</p>
+                  <p class="services-text">Tavoita asiakkaasi juuri oikealla hetkellä. Toteutamme Google-mainontaa, joka tuo näkyvyyttä ja klikkejä.</p>
                 </div>
                 <div class="services-thumb-wrap"><img src="images/taustakuva-6.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
               </div>
@@ -514,14 +514,10 @@
                   <div class="pricing-item-top">
                     <div class="pricing-item-heading">
                       <div class="pricing-title-wrap">
-                        <div class="div-block-2">
-                          <p class="pricing-title">Chatbot -työkalu</p>
-                          <div id="w-node-_126aaeee-a723-6734-8842-5998c6dcc578-6226f583" class="btn-wrap small">Uusi</div>
-                        </div>
+                        <p class="pricing-title">Google Ads</p>
                       </div>
                       <div class="pricing-price-wrap">
-                        <h2 class="pricing-price">300€</h2>
-                        <p class="pricing-price-months">+ ALV 25.5%</p>
+                        <h2 class="pricing-price">Sopimuksen mukaan</h2>
                       </div>
                     </div>
                     <div class="pricing-item-separetor"></div>
@@ -529,13 +525,12 @@
                       <div class="pricing-list-wrap">
                         <div class="pricing-feature-list w-richtext">
                           <ul role="list">
-                            <li>24/7 asiakaspalvelija</li>
-                            <li>Räätälöity vastaustyyli</li>
-                            <li>Monikielinen avustaja</li>
-                            <li>Nopeat vastausajat</li>
-                            <li>Koulutettu juuri sinun yritykselle</li>
-                            <li>Jatkuva kehitys</li>
-                            <li>Tyytyväisyystakuu</li>
+                            <li>Tarkka kohdentaminen</li>
+                            <li>Budjetointi tarpeiden mukaan</li>
+                            <li>Avainsanatutkimus</li>
+                            <li>Mainostekstien suunnittelu</li>
+                            <li>Kampanjastrategia</li>
+                            <li>Seuranta ja raportointi</li>
                           </ul>
                         </div>
                       </div>
