Update web content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Jul 03 2025 11:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Jul 29 2025 14:13:27 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad" lang="en">
 <head>
   <meta charset="utf-8">
@@ -575,6 +575,108 @@
                     <div class="btn-shape"></div>
                   </a>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-section">
+        <div class="section-spacing">
+          <div class="container">
+            <div class="common-content testimonial-heading">
+              <div class="common-title-wrap">
+                <h2 class="common-title">Asiakaspalautteet</h2>
+              </div>
+            </div>
+            <div class="slider-flex-2">
+              <div data-delay="4000" data-animation="slide" class="slider-testimonials w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true" id="sliderId">
+                <div class="mask w-slider-mask">
+                  <div data-w-id="1972ea7b-a2f6-d31d-8be9-4891cc4d8bc1" class="slide-1 w-slide">
+                    <div class="slide-content">
+                      <div class="client-wrapper-2">
+                        <blockquote class="masonry__grid-quote">&quot;<strong>Ammattimiehen työtä ja asiakaspalvelu priimaa.</strong> Ehdottomasti suosittelen ja voin hyvin kuvitella jatkossakin olevani asiakkaana.&quot;</blockquote>
+                        <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                          <div>
+                            <div class="testimonials-name-2">Psykologipalvelu Mikael Mäenpää<br></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div data-w-id="8d9bf4dd-2d0b-8a62-e7a0-e23005c9397b" class="slide-1 w-slide">
+                    <div class="slide-content">
+                      <div class="client-wrapper-2">
+                        <blockquote class="masonry__grid-quote">&quot;Todella ammattitaitoinen, olen enemmän kun tyytyväinen nettisivuihin ja google mainontaan, <strong>lisännyt töitä paljon 🙏</strong>&quot;</blockquote>
+                        <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                          <div>
+                            <div class="testimonials-name-2">Jouni Anttila, Ajtek Oy<br></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div data-w-id="1972ea7b-a2f6-d31d-8be9-4891cc4d8bcf" class="slide-1 w-slide">
+                    <div class="slide-content">
+                      <div class="client-wrapper-2">
+                        <blockquote class="masonry__grid-quote">&quot;<strong>The delivery was very professional and rapid. </strong>Very happy with the communications and outcome!&quot;</blockquote>
+                        <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                          <div>
+                            <div class="testimonials-name-2">Heinaro Insights Oy<br></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div data-w-id="1972ea7b-a2f6-d31d-8be9-4891cc4d8bdd" class="slide-1 w-slide">
+                    <div class="slide-content">
+                      <div class="client-wrapper-2">
+                        <blockquote class="masonry__grid-quote">&quot;Homma meni kerralla pakettiin ja minulle sopivalla aikataululla. <strong>Täydet peukut tälle yritykselle👍🏻</strong>&quot;</blockquote>
+                        <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                          <div>
+                            <div class="testimonials-name-2">VL fixarit<br></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div data-w-id="1972ea7b-a2f6-d31d-8be9-4891cc4d8beb" class="slide-1 w-slide">
+                    <div class="slide-content">
+                      <div class="client-wrapper-2">
+                        <blockquote class="masonry__grid-quote">&quot;<strong>Kaikki meni heti kympillä nappiin.</strong> Logoa on kehuttu tosi paljon työvaatteissa ja koneissa.&quot;</blockquote>
+                        <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                          <div>
+                            <div class="testimonials-name-2"><strong>Traktoriurakointi Marko Miettinen</strong><br><br></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div data-w-id="1972ea7b-a2f6-d31d-8be9-4891cc4d8bfb" class="slide-1 w-slide">
+                    <div class="slide-content">
+                      <div class="client-wrapper-2">
+                        <blockquote class="masonry__grid-quote">&quot;<strong>Palvelu oli erittäin hyvää</strong>, kärsivällistä ja ystävällistä. Kiitos paljon!&quot;</blockquote>
+                        <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                          <div>
+                            <div class="testimonials-name-2">Iloa Siivoukseen Oy<br></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="w-slide">
+                    <div class="client-wrapper-2">
+                      <blockquote class="masonry__grid-quote">&quot;Eelillä oli hyviä ideoita ja visioita kotisivujen ja logon suunnitteluun. <strong>Hyvä asiakaspalvelu ja erittäin kilpailukykyiset hinnat.</strong>&quot;</blockquote>
+                      <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                        <div>
+                          <div class="testimonials-name-2">Reilu Sähkö Oy<br></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="right-arrow left w-slider-arrow-left"><img width="10" loading="lazy" alt="Nuoli oikealle" src="images/nuoli-oikealle-ikoni.svg" class="down-arrow-2 rotate"></div>
+                <div class="right-arrow w-slider-arrow-right"><img width="10" loading="lazy" alt="Nuoli oikealle" src="images/nuoli-oikealle-ikoni.svg" class="down-arrow-2"></div>
+                <div class="slide-nav-2 w-slider-nav w-slider-nav-invert w-round"></div>
               </div>
             </div>
           </div>
