--- a/palvelut.html
+++ b/palvelut.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Jul 03 2025 11:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Jul 29 2025 14:13:27 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed15" data-wf-site="68027b0d8102484c7914ecad" lang="en">
 <head>
   <meta charset="utf-8">
@@ -173,6 +173,18 @@
                         <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
                           <div>
                             <div class="testimonials-name-2">Psykologipalvelu Mikael Mäenpää<br></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div data-w-id="8d9bf4dd-2d0b-8a62-e7a0-e23005c9397b" class="slide-1 w-slide">
+                    <div class="slide-content">
+                      <div class="client-wrapper-2">
+                        <blockquote class="masonry__grid-quote">&quot;Todella ammattitaitoinen, olen enemmän kun tyytyväinen nettisivuihin ja google mainontaan, <strong>lisännyt töitä paljon 🙏</strong>&quot;</blockquote>
+                        <div class="author-flex-2"><img width="32" loading="lazy" alt="" src="https://uploads-ssl.webflow.com/664df11d3916b1a4e878c205/6658bbfe60b480b17d9e3723_verifioitu.png">
+                          <div>
+                            <div class="testimonials-name-2">Jouni Anttila, Ajtek Oy<br></div>
                           </div>
                         </div>
                       </div>
