Update contact page

--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jul 29 2025 14:13:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Sep 17 2025 05:37:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed18" data-wf-site="68027b0d8102484c7914ecad" lang="en">
 <head>
   <meta charset="utf-8">
@@ -79,7 +79,7 @@
                   <h1 class="hero-title">Yhteystiedot</h1>
                 </div>
                 <div class="hero-text-wrap">
-                  <p class="hero-text">Jutellaan lisää! Meihin saa helposti yhteyden – viestillä tai vaikka kahville.</p>
+                  <p class="hero-text">Jutellaan lisää! Voit ottaa yhteyttä viestillä tai hypätä mukaan etäkahveille.</p>
                 </div>
                 <div class="hero-btn-wrap">
                   <a href="#Scroll" class="btn-wrap w-inline-block">
