--- a/palveluehdot.html
+++ b/palveluehdot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 08:57:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:03:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791f4" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
 <head>
   <meta charset="utf-8">
@@ -15,6 +15,7 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://www.nords.fi/palveluehdot" rel="canonical">
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
   <div id="back-to-top" class="page">
@@ -172,7 +173,7 @@
         <section class="section">
           <div class="w-layout-blockcontainer container w-container">
             <div class="w-layout-grid grid grid--6-col">
-              <div id="w-node-_76d14f24-aced-4bea-6636-f0622778796b-bfc791f4" class="item">
+              <div id="w-node-_76d14f24-aced-4bea-6636-f0622778796b-bfc791f4" data-w-id="76d14f24-aced-4bea-6636-f0622778796b" class="item">
                 <div class="richtext__body w-richtext">
                   <h2>1. Yleiset sopimusehdot</h2>
                   <p>Yleiset sopimusehdot ovat vakiokäyttöisiä ehtoja, joita sovelletaan useissa erillisissä sopimuksissa ja yhteistyösopimuksissa.<br><br>Nords Oy:n sopimusehdot täydentävät varsinaisen hankintasopimuksen ehtoja ja pyrkivät helpottamaan kauppojen tekemistä molempien osapuolten välillä.</p>
@@ -605,6 +606,8 @@
     <div data-wf--loader---global--variant="primary" class="loader"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6934202faf17f8cbbfc79092" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/nords-new.js" type="text/javascript"></script>
+  <script src="js/nords-new.js" type="text/javascript"></script><!--  Elfsight AI Chatbot | Untitled AI Chatbot  -->
+  <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
+  <div class="elfsight-app-8710a1d1-348c-4159-a2be-20e841fb548b" data-elfsight-app-lazy=""></div>
 </body>
 </html>
